--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+a,
+a:hover,
+a:visited {
+  text-decoration: none;
+}
