--- a/src/components/Input/styles.module.css
+++ b/src/components/Input/styles.module.css
@@ -41,7 +41,7 @@
   border-radius: 0;
   -moz-appearance: none;
   -webkit-appearance: none;
-  border-bottom: 1px solid transparent;
+  border-bottom: 1px solid #ced5db;
 }
 
 .select {
