--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -1,8 +1,7 @@
-.container {
-}
 .content {
   /* todo fixme */
-  width: 1078px;
+  width: 1080px;
+  box-sizing: border-box;
   margin-left: auto;
   margin-right: auto;
 }
@@ -15,4 +14,16 @@
 
 .main {
   padding-top: 40px;
+}
+
+@media (max-width: 1120px) {
+  .content {
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
+  .main {
+    padding-top: 20px;
+  }
 }
